# identity-automation-platform

./: .gitignore  .pre-commit-config.yaml  README.md  demo.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
.workflows_demo/: cf3a31fe-7fd5-42a7-92b5-1c3b0eb714b9.json
examples/: audit_logging_example.py  crash_recovery_example.py  demo_persist_and_audit.py  workflow_engine_async_example.py  workflow_engine_example.py
src/identity_automation_platform/audit/: __init__.py  events.py  logger.py
src/identity_automation_platform/validation/: validator.py
src/identity_automation_platform/workflows/: __init__.py  async_engine.py  definition.py  engine.py  instance.py  states.py  store.py
tests/: test_audit.py  test_validation.py  test_workflows.py  test_workflows_async.py  test_workflows_persistence.py
